Bug 1116478 - Open web content handlers in the proper tab in e10s. r=billm